2012-03-15  Wojciech Kocjan <zoro2@users.sourceforge.net>

	* zipvfs.tcl: Fix for zip symlinks not supported anymore, bug 3505283

2011-11-28  Steve Huntley  <stephen.huntley@alum.mit.edu>

	* vfslib.tcl: Applied contributed patch for bug 3412801.  Clean up watch
	timers for memchan vfs.

2011-11-28  Steve Huntley  <stephen.huntley@alum.mit.edu>

	* zipvfs.tcl: Applied contributed patch for bug 3395782.  Enables 
	extraction of contents of zip files created using Fossil.


2011-11-28  Steve Huntley  <stephen.huntley@alum.mit.edu>

	* zipvfs.tcl: Reverted bug fix for 3224057.  See bug ID 3303287.


2011-04-28  Steve Huntley  <stephen.huntley@alum.mit.edu>

	* zipvfs.tcl: Added contributed patch to speed up zipvfs directory 
	listing.  See patch 3279418.

2011-03-30  Steve Huntley  <stephen.huntley@alum.mit.edu>

	* vfslib.tcl, zipvfs.tcl: Added contributed patches to fix bugs 3160686
	& 3224057.

2011-03-30  Steve Huntley  <stephen.huntley@alum.mit.edu>

	* globfind.tcl: Updated to latest file version (1.5.3).

2010-12-31  Steve Huntley  <stephen.huntley@alum.mit.edu>

	* vfs.tcl: Removed requirement for 8.6 for sourcing of vfslib.tcl, since
	that file contains 8.5-relevant utils for chan command.  Vfslib.tcl
	includes adequate conditional checks for version-dependent commands.

2010-12-30  Steve Huntley  <stephen.huntley@alum.mit.edu>

	* library/zipvfs.tcl: Wojciech Kocjan contributed tweaks to my latest
	"Frankenstein" patch, which I incorporated.

2010-12-30  Steve Huntley  <stephen.huntley@alum.mit.edu>

	* pkgIndex.tcl.in, vfs.tcl: Switched "package require Tcl 8.4" statement
	to vfs.tcl to conform with accepted practice.

2010-12-30  Steve Huntley  <stephen.huntley@alum.mit.edu>

	* library/zipvfs.tcl: Applied patch 3005441 to fix issue with UTF-8
	detection for filename encoding.  Applied patch 3132957 to enable
	streaming of large files.

2010-12-29  Steve Huntley  <stephen.huntley@alum.mit.edu>
